--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -22,8 +22,7 @@
 }
 
 .Header-title {
-  font: 100px/1.16 sans-serif;
-  font-weight: 900;
+  font: 900 100px/1.16 sans-serif;
   color: #fff;
 }
 
